--- a/PracticeCode.ipynb
+++ b/PracticeCode.ipynb
@@ -2,27 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input(\"Enter a name: \")\n",
+    "age = input(\"Enter your age: \")"
+   ]
   }
  ],
  "metadata": {
