--- a/PracticeCode.ipynb
+++ b/PracticeCode.ipynb
@@ -7,8 +7,16 @@
    "outputs": [],
    "source": [
     "name = input(\"Enter a name: \")\n",
-    "age = input(\"Enter your age: \")"
+    "age = input(\"Enter your age: \")\n",
+    "print(\"you are\",)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
