adding print line

--- a/PracticeCode.ipynb
+++ b/PracticeCode.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "name = input(\"Enter a name: \")\n",
     "age = input(\"Enter your age: \")\n",
-    "print(\"you are\",)"
+    "print(\"your name is \" + name + \" and you are \" +age+ \" years old\",)"
    ]
   },
   {
